// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Tag 1`] = `
<div
  className="normal tag"
>
  React
</div>
`;

exports[`renders Tag default 1`] = `
<div
  className="normal tag"
>
  React
</div>
`;

exports[`renders Tag filled 1`] = `
<div
  className="filled tag"
>
  React
</div>
`;

exports[`renders Tag less 1`] = `
<div
  className="less tag"
>
  React
</div>
`;
